# team-i-openclaw-audit-demo

./: .env.example  .gitattributes  .gitignore  README.md  index.html  pyproject.toml  requirements.txt
backend/: app.py
docs/: DATA_AND_RESULTS.md  DEMO_SCRIPT.md  IMPLEMENTATION_PLAN.md  MODELS.md  VERIFICATION.md  安装与运行.md  实现计划.md  实验量化结果.md  数据与结果.md  模型说明.md  演示讲解脚本.md  统一场景下的技术叙事.md  验证记录.md
logs/: full_demo_fallback_run.json  model_quick_smoke_9728820_debug.json  model_quick_smoke_9728824_debug.json  model_quick_smoke_9728825_debug.json  model_quick_smoke_9728826_debug.json  model_quick_smoke_9728828_debug.json  model_quick_summary_9728820_debug.json  model_quick_summary_9728824_debug.json  model_quick_summary_9728825_debug.json  model_quick_summary_9728826_debug.json  model_quick_summary_9728828_debug.json  model_smoke_run_9728817_a40.json  model_smoke_run_9728830_full_debug.json  model_smoke_run_9728834_full_debug.json  model_smoke_run_9728839_full_debug.json  model_smoke_run_9728842_full_debug.json  model_smoke_run_9728967_full_debug.json  model_smoke_run_9729073_openai_full_debug.json  model_summary.json  model_summary_9728817_a40.json  model_summary_9728830_full_debug.json  model_summary_9728834_full_debug.json  model_summary_9728839_full_debug.json  model_summary_9728842_full_debug.json  model_summary_9728967_full_debug.json  model_summary_9729073_openai_full_debug.json  slurm_model_full_debug_9728830.out  slurm_model_full_debug_9728834.out  slurm_model_full_debug_9728839.out  slurm_model_full_debug_9728842.out  slurm_model_full_debug_9728967.out  (+9 more)
(+62 files in other folders)
